fix: center button text on mobile browsers (attempt #2)

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  display: block;
+  display: inline-block;
   margin: 0;
   text-align: center;
   text-decoration: none;
